--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,13 @@ Homestead.yaml
 Homestead.json
 /.vagrant
 .phpunit.result.cache
+/node_modules
+/public/hot
+/public/storage
+/public/tmp
+/storage/*.key
+/vendor
+.env.backup
+
+.idea/
+/.vscode
