--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "mjaschen/phpgeo": "^4.0",
+        "movemoveapp/laravel-dadata": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
